Fix vertical position of ‘Manage’ link
This doesn’t line up now that the heading sizes have changed.

--- a/app/assets/stylesheets/components/message.scss
+++ b/app/assets/stylesheets/components/message.scss
@@ -238,7 +238,7 @@
     text-align: right;
     padding: $gutter-two-thirds 0 0 0;
     position: relative;
-    top: -1px;
+    top: -6px;
   }
 
 }
